--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 
   <groupId>ru.job4j</groupId>
   <artifactId>job4j_design</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>chapter_001</module>
+    <module>chapter_002</module>
+    <module>chapter_003</module>
+    <module>chapter_004</module>
+    <module>chapter_005</module>
+  </modules>
 
   <name>job4j_design</name>
 
@@ -22,6 +30,14 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.puppycrawl.tools/checkstyle -->
+    <dependency>
+      <groupId>com.puppycrawl.tools</groupId>
+      <artifactId>checkstyle</artifactId>
+      <version>8.36.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
